[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/deck/png_deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/game.gd" type="Script" id=2]
[ext_resource path="res://scenes/button/button.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.186401
margin_top = -0.207336
margin_right = 0.186401
margin_bottom = -0.207336
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.8
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.1
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckRect" parent="Control" instance=ExtResource( 1 )]

[node name="DealButton" parent="." instance=ExtResource( 4 )]
margin_left = 576.0
margin_top = 576.0
margin_right = 678.0
margin_bottom = 627.0

[node name="HitButton" parent="." instance=ExtResource( 4 )]
margin_left = 576.0
margin_top = 576.0
margin_right = 678.0
margin_bottom = 627.0

[node name="StandButton" parent="." instance=ExtResource( 4 )]
margin_left = 576.421
margin_top = 501.582
margin_right = 678.421
margin_bottom = 552.582
[connection signal="pressed" from="DealButton" to="." method="_on_DealButton_pressed"]
